@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object>
+  <resourcetypes>
+    <linkable purge="False">
+      <element value="ftw.subsite.Subsite" />
+    </linkable>
+  </resourcetypes>
+</object>
